# logos-snake-game

./: .mcp.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  PROJECT_KNOWLEDGE.md  README.md  REPORT.md  flake.nix  metadata.json  result
.claude/skills/add-to-workspace/: SKILL.md
.claude/skills/create-ui-app/: SKILL.md
.claude/skills/create-universal-module/: SKILL.md
.claude/skills/inter-module-comm/: SKILL.md
.claude/skills/nix-flake-setup/: SKILL.md
.claude/skills/package-lgx/: SKILL.md
.claude/skills/testing-modules/: SKILL.md
.claude/skills/wrap-external-lib/: SKILL.md
plugins/snake-ui/: manifest.json  metadata.json
src/: HighScorePlugin.cpp  HighScorePlugin.h  SnakeGameBackend.cpp  SnakeGameBackend.h  SnakeGamePlugin.cpp  SnakeGamePlugin.h  high_score_metadata.json  plugin_metadata.json
src/qml/: Main.qml
